opam-version: "2.0"
version: "0.6"
maintainer: "Quentin Heath <12143333+qheath@users.noreply.github.com>"
authors: "Quentin Heath <12143333+qheath@users.noreply.github.com>"
homepage: "https://github.com/qheath/gps"
bug-reports: "https://github.com/qheath/gps/issues"
dev-repo: "git://github.com/qheath/gps.git"
license: "GPL-3"
build: [
  ["dune" "build" "-p" name "-j" jobs "@install"]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]

depends: [
  "menhir" {build}
  "dune" {build}
  "ptime" {build}
  "patience_diff" {with-test}
  "getarg" {with-test}
  "odoc" {with-doc}
]
synopsis: "GPS utilities"
description: """
- nmea: parse and pretty-print [NMEA] files containing GPS data (GP
  talker sentences tagged GGA or RMC, as created by a Sony HDR-AS200V
  action camera)
- trajectory: import, export, create, edit and compare GPS trajectories

[NMEA]: http://freenmea.net/docs"""
#url {
#  src: ""
#  checksum: ""
#}
